# vava_doces

./: .env.example  .gitignore  404.html  ARQUIVOS_CRIADOS.txt  COMMIT_HISTORY.md  DELIVERY_SUMMARY.md  DEVELOPMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LEIA_PRIMEIRO.md  PROJECT_COMPLETE.txt  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_STREAMLIT.md  README.md  README_REFATORACAO.txt  RECEITAS AWI.xlsx  STREAMLIT_SETUP.md  app.py  convert_to_sheets.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  run_app.sh  test_after_conversion.sh  test_connection.py  test_connection_diagnostic.py  test_document_type.py  test_streamlit_load.py
.github/workflows/: mkdocs-deploy.yml
.streamlit/: config.toml
COMMIT_HISTORY/: index.html
COMMIT_HISTORY_NEW/: index.html
DELIVERY_SUMMARY/: index.html
DEVELOPMENT_GUIDE/: index.html
FINAL_SUMMARY/: index.html
IMPLEMENTATION_SUMMARY/: index.html
INDEX/: index.html
LEIA_PRIMEIRO/: index.html
NEXT_STEPS/: index.html
PROJECT_STATUS/: index.html
QUICK_START/: index.html
QUICK_START_STREAMLIT/: index.html
REFACTORING_SUMMARY/: index.html
STREAMLIT_SETUP/: index.html
assets/css/: extra.css
docs/: COMMIT_HISTORY_NEW.md  FILES_SUMMARY.txt  FINAL_CHECKLIST.txt  NEXT_STEPS.md  PROJECT_COMPLETION_REPORT.txt  REFACTORING_SUMMARY.md  STREAMLIT_REFACTORING_SUMMARY.txt  index.md  requirements-docs.txt
search/: search_index.json
src/: __init__.py
tests/: conftest.py  test_cost_analysis_service.py  test_google_sheets_adapter.py  test_integration.py  test_streamlit_app.py
(+3 files in other folders)
